--- a/publications.bib
+++ b/publications.bib
@@ -17,16 +17,24 @@
 	keywords = {antibiotic resistance, bacterial diversity, culturomics, Infection Control, Pseudomonas aeruginosa, Sink drains},
 }
 
-@article{tacaoCTXMproducingBacteriaIsolated2022,
-	title = {{CTX}-{M}-producing bacteria isolated from a highly polluted river system in {Portugal}},
+@article{tacaoCTXMProducingBacteriaIsolated2022a,
+	title = {{CTX}-{M}-{Producing} {Bacteria} {Isolated} from a {Highly} {Polluted} {River} {System} in {Portugal}},
 	volume = {19},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	issn = {1660-4601},
 	url = {https://www.mdpi.com/1660-4601/19/19/11858},
+	doi = {10.3390/ijerph191911858},
+	abstract = {Enterobacteriaceae resistant to third-generation cephalosporins are a great concern for public health, as these are first-line drugs to treat infections. The production of carbapenemases and extended spectrum beta-lactamases (ESBLs) and/or the overexpression of AmpC β-lactamases are the main mechanisms of resistance to these antibiotics. Among the ESBLs, CTX-M β-lactamases are the most prevalent worldwide. Our aims were to determine the prevalence of cefotaxime-resistant Enterobacteriaceae along a heavily polluted river and characterize blaCTX-M carriers. River water was collected in 11 sites along the main course and tributaries, in two sampling moments. Water quality was evaluated and a collection of cefotaxime-resistant isolates was obtained. blaCTX-M carriers were characterized regarding phylogenetic affiliation, clonality, antibiotic susceptibility, gene diversity, and context. Water presented very low quality in all sites. From 147 cefotaxime-resistant isolates, 46\% carried blaCTX-M and were affiliated with Escherichia, Klebsiella, Enterobacter, and Citrobacter. Molecular typing revealed clonal isolates in different sites and over the two years, suggesting survival of the strains in the river or continuous pollution inputs from the same sources. Eight variants of blaCTX-M were found, with blaCTX-M-15 being the most prevalent (52.5\%). Sites with a lower water quality showed the highest resistance rates and prevalence of blaCTX-M, suggesting that river water may embody human health risks.},
+	language = {en},
 	number = {19},
 	urldate = {2025-03-31},
 	journal = {International Journal of Environmental Research and Public Health},
 	author = {Tacão, Marta and Laço, José and Teixeira, Pedro and Henriques, Isabel},
+	month = jan,
 	year = {2022},
-	note = {Publisher: MDPI},
+	note = {Number: 19
+Publisher: Multidisciplinary Digital Publishing Institute},
+	keywords = {?-lactamases, \textit{bla}$_{\textrm{CTX-M}}$, \textit{Enterobacteriaceae}, antibiotic resistance, pig farms, river pollution},
 	pages = {11858},
-	file = {Available Version (via Google Scholar):C\:\\Users\\josel\\Zotero\\storage\\2ZYXKATR\\11858.html:text/html},
+	file = {Full Text PDF:C\:\\Users\\josel\\Zotero\\storage\\9XGANWAH\\Tacão et al. - 2022 - CTX-M-Producing Bacteria Isolated from a Highly Polluted River System in Portugal.pdf:application/pdf},
 }
